Enhance styling and layout of index.html
Added button styling and improved layout.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         color: rgb(212, 155, 255);
         font-family:'Courier New', Courier, monospace;
     }
+    button{
+        background-color: rgb(212, 155, 255);
+        font-family:'Courier New', Courier, monospace;
+        border: none;
+    }
     </style>
 </head>
 <body>
